--- a/Source/OurFood/src/main/resources/application-development.properties
+++ b/Source/OurFood/src/main/resources/application-development.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ourfood
-spring.datasource.username=root
-spring.datasource.password=baks123
+spring.datasource.username=test
+spring.datasource.password=test
 spring.datasource.maxActive=5
 spring.thymeleaf.cache=false
 
