--- a/Source/OurFood/.gitignore
+++ b/Source/OurFood/.gitignore
@@ -2,6 +2,7 @@
 /.classpath
 /.project
 /bin/
+./srs/main/resources/application-development.properties
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
@@ -126,3 +127,4 @@ local.properties
 
 
 
+/build/
