--- a/Source/OurFood/.gitignore
+++ b/Source/OurFood/.gitignore
@@ -4,6 +4,7 @@
 /bin/
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+/src/main/resources/application-development.properties
 
 *.iml
 
