Added Portable Document File versions of the project documents

--- a/Source/OurFood/src/main/resources/application-development.properties
+++ b/Source/OurFood/src/main/resources/application-development.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ourfood
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=baks123
 spring.datasource.maxActive=5
 spring.thymeleaf.cache=false
 
@@ -21,7 +21,7 @@ server.tomcat.access-log-pattern=%h %l %u %t "%r" %s %b %D
 server.tomcat.basedir=/var/log/scanon
 
 #Tomcat port and contextPath details
-server.port=8090
+server.port=8092
 #server.contextPath=/test
 ## Session Timeout = 30 min = 30x60 seconds
 server.session-timeout=1800
