--- a/Source/OurFood/.gitignore
+++ b/Source/OurFood/.gitignore
@@ -2,7 +2,7 @@
 /.classpath
 /.project
 /bin/
-./src/main/resources/application-development.properties
+/src/main/resources/application-development.properties
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
