Accomodating buyerOrderItem creation with buyerOrder try 2

--- a/Source/OurFood/pom.xml
+++ b/Source/OurFood/pom.xml
@@ -146,6 +146,7 @@
 				<filtering>true</filtering>
 				<includes>
 					<include>application-${target.build.environment}.properties</include>
+					<include>**/*.*</include>
 				</includes>
 			</resource>
 		</resources>
