--- a/Source/OurFood/src/main/resources/application-development.properties
+++ b/Source/OurFood/src/main/resources/application-development.properties
@@ -1,16 +1,8 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ourfood
-<<<<<<< HEAD
 spring.datasource.username=njay
 spring.datasource.password=Zephyrs!23
-=======
-spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=asd
->>>>>>> 5c16548156db34cb462f20bf2f06b423f8da345e
-=======
-spring.datasource.password=baks123
->>>>>>> parent of 5c16548... locations given , google maps API call made
+
 spring.datasource.maxActive=5
 spring.thymeleaf.cache=false
 
@@ -27,7 +19,7 @@ spring.social.google.appSecret=
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%h %l %u %t "%r" %s %b %D
-server.tomcat.basedir=/var/log/scanon
+server.tomcat.basedir=/home/njay/.tomcat
 
 #Tomcat port and contextPath details
 server.port=8092
