--- a/Source/OurFood/src/main/resources/application-development.properties
+++ b/Source/OurFood/src/main/resources/application-development.properties
@@ -1,8 +1,8 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ourfood
 
-spring.datasource.username=njay
-spring.datasource.password=Zephyrs!23
+spring.datasource.username=root
+spring.datasource.password=baks123
 
 spring.datasource.maxActive=5
 spring.thymeleaf.cache=false
@@ -20,7 +20,7 @@ spring.social.google.appSecret=
 
 server.tomcat.access-log-enabled=true
 server.tomcat.access-log-pattern=%h %l %u %t "%r" %s %b %D
-server.tomcat.basedir=/home/njay/.tomcat
+server.tomcat.basedir=/var/log/scanon
 
 #Tomcat port and contextPath details
 server.port=8092
