--- a/Source/OurFood/src/main/resources/application-development.properties
+++ b/Source/OurFood/src/main/resources/application-development.properties
@@ -2,7 +2,7 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ourfood
 
 spring.datasource.username=root
-spring.datasource.password=baks123
+spring.datasource.password=mhm.275.198
 
 spring.datasource.maxActive=5
 spring.thymeleaf.cache=false
