--- a/Source/OurFood/src/main/resources/application-development.properties
+++ b/Source/OurFood/src/main/resources/application-development.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost/ourfood
 
 spring.datasource.username=root
 #Change password according to your mysql database password
-spring.datasource.password=baks123
+spring.datasource.password=asd
 
 spring.datasource.maxActive=5
 spring.thymeleaf.cache=false
